# random-crate

./: LICENSE  README.md  main.py  pyproject.toml
configs/: containers.yml  individual_treasure.yml
loots/: cr6_loot.yml
src/: consts.py  containers.py  items.py  random_wealth.py  range_dict.py  tables.py  utils.py
